samples/_failures_safe/1761137721_f42155_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dcc117e9.c: In function ‘main’:
./samples/SAFE/__tmp_dcc117e9.c:160:26: error: ‘token’ undeclared (first use in this function); did you mean ‘Token’?
  160 |     print_tokens(tokens, token
      |                          ^~~~~
      |                          Token
./samples/SAFE/__tmp_dcc117e9.c:160:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_dcc117e9.c:160:31: error: expected ‘)’ at end of input
  160 |     print_tokens(tokens, token
      |                 ~             ^
      |                               )
./samples/SAFE/__tmp_dcc117e9.c:160:5: error: expected declaration or statement at end of input
  160 |     print_tokens(tokens, token
      |     ^~~~~~~~~~~~
